# Edge-Mobile-Anomaly-Detection-Apple

./: .context  .dockerignore  .env.example  .gitignore  LICENSE  PERFORMANCE_LEVELS.md  PERFORMANCE_MEASUREMENTS.md  README.md  VALIDATION_GUIDE.md  main.py  pyproject.toml  requirements.txt  stage4_output_analysis.md  test_visualization_functionality.py  visualization_test_final_report.md
docs/: README.md  codex_review.md
experiments/: README.md
reports/: anomaly_analysis_summary.txt  ingestion_optimized_report_20250606_213224.txt  ingestion_report_20250606_004815.txt  ingestion_report_20250606_213304.txt  preprocessing_report_20250606_205944.txt  preprocessing_report_20250606_210032.txt  preprocessing_report_20250606_210204.txt  preprocessing_report_20250606_211222.txt  preprocessing_report_20250606_211352.txt  week_selection_optimized_report_20250607_142706.txt  week_selection_report_20250607_134336.txt  week_selection_report_20250607_134624.txt  week_selection_report_20250607_135310.txt  week_selection_report_20250607_135521.txt
scripts/: 01_data_ingestion.py  01_data_ingestion_aggressive.py  01_data_ingestion_moderate.py  01_data_ingestion_optimized.py  02_data_preprocessing.py  03_week_selection.py  03_week_selection_optimized.py  04_anomaly_detection_individual.py  04_anomaly_detection_osp.py  04_anomaly_detection_osp_detailed.py  04_anomaly_detection_osp_moderate.py  04_anomaly_detection_osp_optimized.py  05_analyze_anomalies.py  06_generate_anomaly_map.py  07_plot_extreme_cell_timeline.py  analyze_severe_anomalies.py  benchmark_all_levels.py  benchmark_micro_test.py  run_pipeline.py  (+9 more)
(+86 files in other folders)
