[project]
name = "edge-mobile-anomaly-detection-apple"
version = "0.2.0"
description = "Mobile Network Anomaly Detection Pipeline Optimized for Apple Silicon"
requires-python = ">=3.13"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Jose M. Franco Valiente", email = "josemifv@gmail.com"},
]
keywords = [
    "anomaly-detection",
    "mobile-networks",
    "apple-silicon",
    "machine-learning",
]
dependencies = [
    "aiofiles>=24.1.0",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "pandas>=2.3.0",
    "psutil>=7.0.0",
    "pyarrow>=20.0.0",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "python-dotenv>=1.0.0",
    "torch>=2.2.0",  # For MPS support
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "black>=24.1.0",
    "isort>=5.13.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src"

[tool.black]
line-length = 88
target-version = ['py313']

[tool.isort]
profile = "black"
multi_line_output = 3
